<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.sweng.bohdomp.dialogue.ui.conversationList.ConversationListActivity" >

    <!--  Items should appear in the dropdown menu  -->
    <item android:id="@+id/action_deleteAll"
        android:title="@string/action_deleteAll"
        android:showAsAction="never" />

    <!--  Items should appear as button  -->
    <item android:id="@+id/action_fingerPrint"
        android:title="@string/fingerprint"
        android:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_action_new_account"/>
    <item android:id="@+id/action_addConversation"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_addConversation"
        android:showAsAction="ifRoom"
        android:enabled="true"/>
</menu>
