<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/message_to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/selectContact"
            android:singleLine="true"
            android:ems="10"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/to_hint">
            <requestFocus/>
        </EditText>

        <Button
            android:id="@+id/selectContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/selectButton"
            android:textSize="12sp"/>

    </RelativeLayout>


    <Button
        android:id="@+id/create_conversation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_conversation_button"
        android:layout_marginTop="10dp"/>

</LinearLayout>